fix: used collect instead of tolist